# Satta-King-Porta

./: .gitignore  .htaccess  .installed  .replit  DEPLOYMENT.md  admin.php  app.py  chart.php  convert_mysql_to_pg.py  daily-updates.php  index.php  install.php  news-post.php  news.php  page.php  post.php  posts_import.sql.gz.b64  pyproject.toml  replit.md  requirements.txt  router.php  sitemap.php
api/: scrape.php
attached_assets/: Pasted---1770640696213_1770640696214.txt  Pasted--IfModule-IfModule-Enable-backwards-compatible-Server-S_1769948797635.txt  Pasted--Logs-begin-at-Mon-2025-11-10-12-47-14-CET-end-at-Tue-2_1770073405147.txt  Pasted--div-class-main-content-table-class-quick-result-board-_1769925278875.txt  Pasted--div-class-main-content-table-class-quick-result-board-_1770023564781.txt  Pasted--div-class-main-content-table-class-quick-result-board-_1770031984736.txt  Pasted--php-header-Cache-Control-no-cache-no-store-must-revali_1769885938405.txt  Pasted--php-header-Cache-Control-no-cache-no-store-must-revali_1769925037959.txt  Pasted--php-session-start-header-Cache-Control-no-cache-no-sto_1769885529353.txt  Pasted--sattaking-service-Satta-King-Flask-Application-Loaded-_1770064726671.txt  Pasted--table-class-quick-result-board-tbody-tr-class-board-ti_1767870550585.txt  Pasted--venv-root-mail-home-digitalcash24-sattaking-com-im-req_1770062817190.txt  Pasted-ALTER-TABLE-root-mail-home-digitalcash24-sattaking-com-_1770073454619.txt  Pasted-CREATE-TABLE-psql-deploy-schema-sql-127-ERROR-syntax-er_1770063872417.txt  (+14 more)
config/: database.php  init.php
css/: style.css
(+25 files in other folders)
